# LCLS_FEL_Surrogate

./: MANIFEST.in  README.md  lumetorchmodel_example.py  model_config.yaml  pyproject.toml  register_to_mlflow.py
examples/: README.md  lumetorchmodel_usage_example.py
lcls_fel_model/: __init__.py  loader.py
lcls_fel_model/resources/: model_config.yaml
